src/FrontEnd/CstListenerAndVisitor/MeowParser.java
// Generated from /Users/lagoon0o0/Documents/Compiler/MeowCompiler/src/FrontEnd/Meow.g4 by ANTLR 4.5.1
package FrontEnd.CstListenerAndVisitor;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MeowParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, LeftParen=2, RightParen=3, LeftBracket=4, RightBracket=5, LeftBrace=6, 
		RightBrace=7, Less=8, LessEqual=9, Greater=10, GreaterEqual=11, LeftShift=12, 
		RightShift=13, Plus=14, PlusPlus=15, Minus=16, MinusMinus=17, Star=18, 
		Div=19, Mod=20, And=21, Or=22, AndAnd=23, OrOr=24, Caret=25, Not=26, Tilde=27, 
		Question=28, Colon=29, Semi=30, Comma=31, Assign=32, StarAssign=33, DivAssign=34, 
		ModAssign=35, PlusAssign=36, MinusAssign=37, LeftShiftAssign=38, RightShiftAssign=39, 
		AndAssign=40, XorAssign=41, OrAssign=42, Equal=43, NotEqual=44, Arrow=45, 
		Dot=46, New=47, Bool=48, Int=49, String=50, Void=51, Class=52, Null=53, 
		If=54, Else=55, For=56, While=57, Return=58, Continue=59, Break=60, TBD=61, 
		BooleanConstant=62, IntegerConstant=63, Stringliteral=64, Whitespace=65, 
		Newline=66, Identifier=67, IdentifierNonDigit=68, LineComment=69;
	public static final int
		RULE_primaryExpression = 0, RULE_postfixExpression = 1, RULE_unaryExpression = 2, 
		RULE_castExpression = 3, RULE_multiplicativeExpression = 4, RULE_addativeExpression = 5, 
		RULE_shiftExpression = 6, RULE_relationalExpression = 7, RULE_equalityExpression = 8, 
		RULE_andExpression = 9, RULE_xorExpression = 10, RULE_orExpression = 11, 
		RULE_logicalAndExpression = 12, RULE_logicalOrExpression = 13, RULE_conditionalExpression = 14, 
		RULE_assignmentExpression = 15, RULE_assignmentOperator = 16, RULE_argumentExpression = 17, 
		RULE_expression = 18, RULE_creator = 19, RULE_typeName = 20, RULE_primitiveType = 21, 
		RULE_block = 22, RULE_blockStatements = 23, RULE_statement = 24, RULE_expressionStatement = 25, 
		RULE_program = 26, RULE_translationUnits = 27, RULE_translationUnit = 28, 
		RULE_classDeclaration = 29, RULE_classBody = 30, RULE_classBodyDeclaration = 31, 
		RULE_memberDeclaration = 32, RULE_fieldDeclaration = 33, RULE_functionDeclaration = 34, 
		RULE_formalParameters = 35, RULE_formalParameterList = 36, RULE_formalParameter = 37, 
		RULE_variableDeclarationStatement = 38, RULE_variableDeclaration = 39, 
		RULE_variableDeclaratorList = 40, RULE_variableDeclarator = 41, RULE_variableDeclaratorID = 42, 
		RULE_variableDeclaratorIDList = 43, RULE_constant = 44, RULE_testID = 45;
	public static final String[] ruleNames = {
		"primaryExpression", "postfixExpression", "unaryExpression", "castExpression", 
		"multiplicativeExpression", "addativeExpression", "shiftExpression", "relationalExpression", 
		"equalityExpression", "andExpression", "xorExpression", "orExpression", 
		"logicalAndExpression", "logicalOrExpression", "conditionalExpression", 
		"assignmentExpression", "assignmentOperator", "argumentExpression", "expression", 
		"creator", "typeName", "primitiveType", "block", "blockStatements", "statement", 
		"expressionStatement", "program", "translationUnits", "translationUnit", 
		"classDeclaration", "classBody", "classBodyDeclaration", "memberDeclaration", 
		"fieldDeclaration", "functionDeclaration", "formalParameters", "formalParameterList", 
		"formalParameter", "variableDeclarationStatement", "variableDeclaration", 
		"variableDeclaratorList", "variableDeclarator", "variableDeclaratorID", 
		"variableDeclaratorIDList", "constant", "testID"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'for'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", 
		"'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", 
		"'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", "':'", 
		"';'", "','", "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
		"'>>='", "'&='", "'^='", "'|='", "'=='", "'!='", "'->'", "'.'", "'new'", 
		"'bool'", "'int'", "'string'", "'void'", "'class'", "'null'", "'if'", 
		"'else'", "'For'", "'while'", "'return'", "'continue'", "'break'", "'ToBeDone'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
		"LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
		"LeftShift", "RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", 
		"Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", 
		"Question", "Colon", "Semi", "Comma", "Assign", "StarAssign", "DivAssign", 
		"ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", "RightShiftAssign", 
		"AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", "Arrow", "Dot", 
		"New", "Bool", "Int", "String", "Void", "Class", "Null", "If", "Else", 
		"For", "While", "Return", "Continue", "Break", "TBD", "BooleanConstant", 
		"IntegerConstant", "Stringliteral", "Whitespace", "Newline", "Identifier", 
		"IdentifierNonDigit", "LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Meow.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MeowParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class PrimaryExpressionContext extends ParserRuleContext {
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
	 
		public PrimaryExpressionContext() { }
		public void copyFrom(PrimaryExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrimaryExpressionIdentifierContext extends PrimaryExpressionContext {
		public TerminalNode Identifier() { return getToken(MeowParser.Identifier, 0); }
		public PrimaryExpressionIdentifierContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPrimaryExpressionIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPrimaryExpressionIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPrimaryExpressionIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrimaryExpressionParenContext extends PrimaryExpressionContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrimaryExpressionParenContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPrimaryExpressionParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPrimaryExpressionParen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPrimaryExpressionParen(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrimaryExpressionStringLiteralContext extends PrimaryExpressionContext {
		public TerminalNode Stringliteral() { return getToken(MeowParser.Stringliteral, 0); }
		public PrimaryExpressionStringLiteralContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPrimaryExpressionStringLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPrimaryExpressionStringLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPrimaryExpressionStringLiteral(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrimaryExpressionconstantContext extends PrimaryExpressionContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public PrimaryExpressionconstantContext(PrimaryExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPrimaryExpressionconstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPrimaryExpressionconstant(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPrimaryExpressionconstant(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primaryExpression);
		try {
			setState(99);
			switch (_input.LA(1)) {
			case Identifier:
				_localctx = new PrimaryExpressionIdentifierContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				match(Identifier);
				}
				break;
			case Null:
			case BooleanConstant:
			case IntegerConstant:
				_localctx = new PrimaryExpressionconstantContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				constant();
				}
				break;
			case Stringliteral:
				_localctx = new PrimaryExpressionStringLiteralContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				match(Stringliteral);
				}
				break;
			case LeftParen:
				_localctx = new PrimaryExpressionParenContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(95);
				match(LeftParen);
				setState(96);
				expression();
				setState(97);
				match(RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostfixExpressionContext extends ParserRuleContext {
		public PostfixExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfixExpression; }
	 
		public PostfixExpressionContext() { }
		public void copyFrom(PostfixExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PostfixExpressionBracketContext extends PostfixExpressionContext {
		public PostfixExpressionContext postfixExpression() {
			return getRuleContext(PostfixExpressionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PostfixExpressionBracketContext(PostfixExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPostfixExpressionBracket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPostfixExpressionBracket(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPostfixExpressionBracket(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PostfixExpressionDotContext extends PostfixExpressionContext {
		public PostfixExpressionContext postfixExpression() {
			return getRuleContext(PostfixExpressionContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MeowParser.Identifier, 0); }
		public PostfixExpressionDotContext(PostfixExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPostfixExpressionDot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPostfixExpressionDot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPostfixExpressionDot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PostfixExpressionMinusMinusContext extends PostfixExpressionContext {
		public PostfixExpressionContext postfixExpression() {
			return getRuleContext(PostfixExpressionContext.class,0);
		}
		public PostfixExpressionMinusMinusContext(PostfixExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPostfixExpressionMinusMinus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPostfixExpressionMinusMinus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPostfixExpressionMinusMinus(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PostfixExpressionPreContext extends PostfixExpressionContext {
		public PrimaryExpressionContext primaryExpression() {
			return getRuleContext(PrimaryExpressionContext.class,0);
		}
		public PostfixExpressionPreContext(PostfixExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPostfixExpressionPre(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPostfixExpressionPre(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPostfixExpressionPre(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PostfixExpressionParenContext extends PostfixExpressionContext {
		public PostfixExpressionContext postfixExpression() {
			return getRuleContext(PostfixExpressionContext.class,0);
		}
		public ArgumentExpressionContext argumentExpression() {
			return getRuleContext(ArgumentExpressionContext.class,0);
		}
		public PostfixExpressionParenContext(PostfixExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPostfixExpressionParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPostfixExpressionParen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPostfixExpressionParen(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PostfixExpressionPlusPlusContext extends PostfixExpressionContext {
		public PostfixExpressionContext postfixExpression() {
			return getRuleContext(PostfixExpressionContext.class,0);
		}
		public PostfixExpressionPlusPlusContext(PostfixExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).enterPostfixExpressionPlusPlus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MeowListener ) ((MeowListener)listener).exitPostfixExpressionPlusPlus(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MeowVisitor ) return ((MeowVisitor<? extends T>)visitor).visitPostfixExpressionPlusPlus(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostfixExpressionContext postfixExpression() throws RecognitionException {
		return postfixExpression(0);
	}

	private PostfixExpressionContext postfixExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PostfixExpressionContext _localctx = new PostfixExpressionContext(_ctx, _parentState);
		PostfixExpressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_postfixExpression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new PostfixExpressionPreContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(102);
			primaryExpression();
			}
			_ctx.stop = _input.LT(-1);
			setState(124);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(122);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new PostfixExpressionBracketContext(new PostfixExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(104);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(105);
						match(LeftBracket);
						setState(106);
						expression();
						setState(107);
						match(RightBracket);
						}
						break;
					case 2:
						{
						_localctx = new PostfixExpressionParenContext(new PostfixExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(109);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(110);
						match(LeftParen);
						setState(112);
						_la = _input.LA(1);
						if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LeftParen) | (1L << PlusPlus) | (1L << MinusMinus) | (1L << Not) | (1L << Tilde) | (1L << New) | (1L << Null) | (1L << BooleanConstant) | (1L << IntegerConstant))) != 0) || _la==Stringliteral || _la==Identifier) {
							{
							setState(111);
							argumentExpression(0);
							}
						}

						setState(114);
						match(RightParen);
						}
						break;
					case 3:
						{
						_localctx = new PostfixExpressionDotContext(new PostfixExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(115);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(116);
						match(Dot);
						setState(117);
						match(Identifier);
						}
						break;
					case 4:
						{
						_localctx = new PostfixExpressionPlusPlusContext(new PostfixExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(118);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(119);
						match(PlusPlus);
						}
						break;
					case 5:
						{
						_localctx = new PostfixExpressionMinusMinusContext(new PostfixExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(120);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(121);
						match(MinusMinus);
						}
						break;
					}
					} 
				}
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
